Try to fix bugs on iphone

--- a/src/components/Home/style/Home.scss
+++ b/src/components/Home/style/Home.scss
@@ -557,7 +557,8 @@
                         padding: 0 $main-padding;
                         margin: 0;
                         display: flex;
-                        justify-content: space-between;
+                        justify-content: center;
+                        align-items: center;
                         flex-direction: column;
 
                         width: 100vw;
@@ -571,8 +572,10 @@
 
 
                         .header__menu-row {
+                            width: 100%;
                             display: flex;
                             align-items: center;
+                            justify-content: start;
                             column-gap: 10%;
 
                             .header__menu-nav {
